# physics-labs

./: README.md  pyproject.toml
docs/dmm/fluke/: 45.md  8845\6a.md
docs/rigol/: dc800.md
docs/sig-gen/philips/: pm5139.md
docs/sig-gen/siglent/: sdg2042x.md
src/inst_ctrl/: __init__.py  dmm.py  psu.py  sig_gen.py  siglent.py
