[project]
name = "inst-ctrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyvisa>=1.16.1",
    "tqdm>=4.67.1",
]

[project.scripts]
inst-ctrl = "inst_ctrl:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
units = [
    "pint>=0.25.2",
]
